davidNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: david
  labels:
    name: david
