davidsappDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: davidsapp
  namespace: david
spec:
  replicas: 3
  selector:
    matchLabels:
      app: davidsapp
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: davidsapp
    spec:
      containers:
      - image: davidmachacek/davidsapp:latest
        name: davidsnodejs
        readinessProbe:
          periodSeconds: 10
          httpGet:
            path: /
            port: 8080
